--- a/Emails/cita_cancelada.html
+++ b/Emails/cita_cancelada.html
@@ -216,7 +216,7 @@
 															<td style="text-align:center;width:100%;padding-top:35px;">
 																<h1
 																	style="margin: 0; color: #072b52; direction: ltr; font-family: 'Lora', Georgia, serif; font-size: 50px; font-weight: normal; letter-spacing: 1px; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0;">
-																	<strong>Registro Exitoso</strong></h1>
+																	<strong>Cita Cancelada</strong></h1>
 															</td>
 														</tr>
 													</table>
@@ -276,10 +276,7 @@
 																		style="font-size: 12px; font-family: 'Lato', Tahoma, Verdana, Segoe, sans-serif; mso-line-height-alt: 18px; color: #222222; line-height: 1.5;">
 																		<p
 																			style="margin: 0; font-size: 16px; text-align: center;">
-																			<strong>Si usted puede leer este correo,
-																				esto significa que se ha registrado
-																				exitosamente en la plataforma virtual de
-																				la caja de seguro social.</strong></p>
+																			<strong>Su cita agendada para: {{ fecha }} con {{ nombre }}, ha sido cancelada </strong></p>
 																		<p
 																			style="margin: 0; font-size: 16px; text-align: center;">
 																			<strong>Haga <a
