Corregir errores ortograficos en emails

--- a/Emails/cambiar_contraseña.html
+++ b/Emails/cambiar_contraseña.html
@@ -277,8 +277,8 @@
 																		<p
 																			style="margin: 0; font-size: 16px; text-align: center;">
 																			<strong>
-                                                                                Utilice el link debajo para crear una nueva contrasena. <br>
-                                                                                Si usted no ha solicitado el cambio de contrasena, ignore este email, el link expirara por su cuenta.
+                                                                                Utilice el link debajo para crear una nueva clave. <br>
+                                                                                Si usted no ha solicitado el cambio de clave, ignore este email, el link expirara por su cuenta.
                                                                             </strong></p>
                                                                             <div style="padding: 10px 5px; background-color: #072b52; margin-top: 20px;">
                                                                                 <p
