--- a/Emails/cita_reprogramada.html
+++ b/Emails/cita_reprogramada.html
@@ -279,7 +279,7 @@
 																			<strong>Este email es para notificarle que ha reprogramado su cita para el {{ fecha }} a las {{ hora }}</strong></p>
 																		<p
 																			style="margin: 0; font-size: 16px; text-align: center;">
-																			<strong>Haga <a
+																			<strong>Haga clic<a
 																					href="http://csspanama.online/"
 																					rel="noopener"
 																					style="text-decoration: underline; color: #8a3b8f;"
