--- a/Emails/registro_exitoso.html
+++ b/Emails/registro_exitoso.html
@@ -282,7 +282,7 @@
 																				la caja de seguro social.</strong></p>
 																		<p
 																			style="margin: 0; font-size: 16px; text-align: center;">
-																			<strong>Haga <a
+																			<strong>Haga clic<a
 																					href="http://csspanama.online/"
 																					rel="noopener"
 																					style="text-decoration: underline; color: #8a3b8f;"
