--- a/Emails/cita_cancelada.html
+++ b/Emails/cita_cancelada.html
@@ -279,7 +279,7 @@
 																			<strong>Su cita agendada para: {{ fecha }} con {{ nombre }}, ha sido cancelada </strong></p>
 																		<p
 																			style="margin: 0; font-size: 16px; text-align: center;">
-																			<strong>Haga <a
+																			<strong>Haga clic<a
 																					href="http://csspanama.online/"
 																					rel="noopener"
 																					style="text-decoration: underline; color: #8a3b8f;"
